# call-center

./: .gitignore  .python-version  Makefile  README.md  domain.py  notebook.ipynb  notebook.py  pyproject.toml  q1.py  requirements.txt  run.py  test.py
data/json/: days.json  gen_json.py  output1.json  output2.json  output3.json  shifts.json  week.json
evaluation/: task1.py  task2.py  task3.py  task4.py
expect/: output1.json  output2.json
output/: output1.json  output2.json  output3.json  output4.json  output4_mod.json
result/: output2.json
sol/: task2.py
solutions/: run.py  task1.py  task1_domain.py  task1_refactor.py  task1_refactor_domain.py  task2.py  task3.py  task3_domain.py  task3_mod.py  task4.py  utility.py
src/: q2.py
