[tool.poetry]
name = "call-center"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "call_center" }]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
scipy = "^1.10.1"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = 'E203'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
